wishlist and 2 other page converted to vue

--- a/src/assets/dashboard/css/responsive.css
+++ b/src/assets/dashboard/css/responsive.css
@@ -4,25 +4,33 @@
 	}
 }
 @media screen and (min-width:414px) and (max-width: 684px){
-/*Header Seciton*/
-.left-side-menu-light .navbar-custom .topnav-menu .nav-link {
-    padding: 2px!important;
-    font-size: 13px!important;
-}
-.topnav-menu-left .search{
+	/*Header Seciton*/
+	.left-side-menu-light .navbar-custom .topnav-menu .nav-link {
+		padding: 2px!important;
+		font-size: 13px!important;
+	}
+	.topnav-menu-left .search{
 		width:160px!important;
 	}
 
-/*Content*/
+	/*Content*/
 
-.content-page .table-centered td, .table-centered th {
-    font-size: 13px;
-}
+	.content-page .table-centered td, .table-centered th {
+		font-size: 13px;
+	}
+	/*Transction Seciton*/
+	.transaction-body td,th,a{
+		font-size:9px!important;
+	}
 
 }
 @media screen and (min-width: 250px) and (max-width: 413px){
 	.left-side-menu-light .navbar-custom .topnav-menu .nav-link {
-    padding: 1px!important;
-    font-size: 7px!important;
-}
+		padding: 1px!important;
+		font-size: 7px!important;
+	}
+	/*Transction Seciton*/
+	.transaction-body td,th,a{
+		font-size:9px!important;
+	}
 }
