--- a/src/assets/dashboard/css/style.css
+++ b/src/assets/dashboard/css/style.css
@@ -15,20 +15,20 @@ body{
 }
 .search{
 	width: 500px;
-    position: relative;
-    top: 17px;
-    left: 102px;
+	position: relative;
+	top: 17px;
+	left: 102px;
 }
 
 /*Left Side Menu*/
 .left-side-menu{
-	background-color:#84BC34!important;
+	background-color:#3D3D3F!important;
 	color:#fff!important;
 }
 #sidebar-menu a{
 	padding: 10px 18px;
-    font-size: 16px!important;
-    font-weight: lighter;
+	font-size: 16px!important;
+	font-weight: lighter;
 }
 .sidebar-menu img{
 	margin-right:3px;
@@ -42,11 +42,43 @@ body{
 	margin:0!important;
 }
 .orders-section a{
-	padding: 0 25px;
-    color: #000;
+	padding: 0 20px;
+	color: #000;
 }
 
 /*Message Section*/
 .contact p{
 	margin-bottom:4px!important;
+}
+
+/*Wishlist*/
+.wish-list-product .row{
+	margin-bottom:10px;
+	border-bottom:1px dashed #ddd;
+}
+
+/*Transcation*/
+.transaction-body img {
+	width: 50px;
+	display: block;
+}
+.transaction-body p{
+	margin-bottom:0px!important;
+}
+.cart-li{
+	margin-left: 306px;
+	margin-top: 12px;
+	width:40px!important;
+}
+.profile{
+	background-color:green!important;
+	padding-bottom:5px;
+}
+.left-side-menu{
+	top:50px!important;
+}
+
+/*Order Section*/
+.orders-section .table tr td p{
+	margin-bottom:0px!important;
 }
