--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,8 +3,12 @@ body {
 }
 
 /*Typography*/
-.box-shadow {
-
+.sho{
+    position: absolute;
+    transform: translate3d(-15px, -146px, 0px);
+    top: 0px;
+    left: 0px;
+    will-change: transform;
 }
 
 
@@ -54,7 +58,7 @@ body {
 
 .category-menu-section .show {
     width: 800px !important;
-    height: 100%;
+    height: auto;
     top: 188px !important;
     left: 270px !important;
     padding: 15px;
@@ -189,7 +193,7 @@ body {
 /*Registration start*/
 .main-register {
     background: rgb(0, 0, 0, 0.4);
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
@@ -198,9 +202,21 @@ body {
     align-items: center;
     z-index: 99;
 }
+.v-application--wrap{
+    position: unset!important;
+}
+.vm--modal{
+    position: unset;
+}
+.vm--overlay{
+    position: unset;
+}
+.vm--container{
+    position: unset;
+}
 .register{
     top:50px;
-    height:655px;
+    height:auto;
     width:450px;
     background: #fff;
     position: relative;
@@ -251,7 +267,7 @@ body {
     font-size:14px;
 }
 .login {
-    height: 400px;
+    height: auto;
     width: 355px;
     top:50px;
     background: #fff;
